gitops/manifests/workloads/managemeals/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-api
  labels:
    app.kubernetes.io/name: managemeals-api
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-api
    spec:
      containers:
        - name: managemeals-api
          image: ghcr.io/managemeals/manage-meals-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-web
  labels:
    app.kubernetes.io/name: managemeals-web
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-web
    spec:
      containers:
        - name: managemeals-web
          image: ghcr.io/managemeals/manage-meals-web:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-mongodb
  labels:
    app.kubernetes.io/name: managemeals-mongodb
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-mongodb
    spec:
      containers:
        - name: managemeals-mongodb
          image: mongo:7
          ports:
            - name: mongo
              protocol: TCP
              containerPort: 27017
          volumesMounts:
            - mountPath: /data/db
              name: managemeals-mongodb-data
      volumes:
        - name: managemeals-mongodb-data
          persistentVolumeClaim:
            claimName: managemeals-mongodb-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-redis
  labels:
    app.kubernetes.io/name: managemeals-redis
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-redis
    spec:
      containers:
      - name: managemeals-redis
        image: redis:7
        ports:
          - name: redis
            protocol: TCP
            containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-scraper
  labels:
    app.kubernetes.io/name: managemeals-scraper
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-scraper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-scraper
    spec:
      containers:
        - name: managemeals-scraper
          image: ghcr.io/managemeals/manage-meals-scraper:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-typesense
  labels:
    app.kubernetes.io/name: managemeals-typesense
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-typesense
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-typesense
    spec:
      containers:
        - name: managemeals-typesense
          image: typesense/typesense:0.25.2
          ports:
            - name: http
              protocol: TCP
              containerPort: 8108
          volumesMounts:
            - mountPath: /data
              name: managemeals-typesense-data
      volumes:
        - name: managemeals-typesense-data
          persistentVolumeClaim:
            claimName: managemeals-typesense-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managemeals-searchsync
  labels:
    app.kubernetes.io/name: managemeals-searchsync
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: managemeals-searchsync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: managemeals-searchsync
    spec:
      containers:
      - name: managemeals-searchsync
        image: ghcr.io/managemeals/manage-meals-search-sync:latest
