gitops/manifests/workloads/managemeals/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managemeals
  labels:
    app.kubernetes.io/name: managemeals-web
spec:
  rules:
    - host: "managemeals.bodkys.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: managemeals-web
                port:
                  name: http
  tls:
    - hosts:
        - "managemeals.bodkys.house"
